# k8s-sweeper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test-pyproject.toml.bk
.github/workflows/: release.yml  test-gha.yml
data/: pause-pods.yaml  priorityclass-default.yml
data/cronjob/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  cronjob.yaml  service-account.yaml
data/manifests/: README.md
data/manifests/node-pool-tests/: default.yaml  namespace.yaml  spot-nodeaff.yaml  spot.yaml
src/: cli.py
src/sweeper/: auto_sweeper.py  cli.py  event.py  graceful_shutdown.py  k8s.py  logging.py  pause_pods.py  sweeper.py  utils.py
test/: README.md
test/kind/: cluster.sh  kind.yaml  test-deployments.yaml
test/kwok/: config.sh  kwok-node-default.sh  kwok-node-spot.sh  kwok-pods.sh  kwok-uv.sh  kwok.sh
