[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sweeper"
version = "1.1.1"
dynamic = ["dependencies"]
requires-python = ">=3.10"

[project.scripts]
sweeper = "sweeper.cli:cli"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
